--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ivan Fountain Services</title>
+    <meta
+      name="description"
+      content="SoCal's Premier Fountain Service"
+      data-rh="true"
+    />
+    <link rel="canonical" href="https://ivanfountain.vercel.app/" />
+    <title>Ivan Fountain Service</title>
   </head>
 
   <body>
