--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       content="SoCal's Premier Fountain Service"
       data-rh="true"
     />
+    <meta
+      name="google-site-verification"
+      content="jmFu4dX2WqwDHmm7TROMEt6Oa9E7cy9lya0JEiRvgos"
+    />
     <link rel="canonical" href="https://ivanfountain.vercel.app/" />
     <title>Ivan Fountain Service</title>
   </head>
